get, query params, get-параметры, query string

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script
+   
+    <title>Document</title>
+</head>
+<body>
+    <button id="click-me">click me!</button> 
+    <input id="page-number" value='' type="number" />
+  <div id="result"></div>
+  
+  <script
   src="https://code.jquery.com/jquery-2.2.4.js"
   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
   crossorigin="anonymous"></script>
   <script src="E:\Ajax\index.js"></script>
-    <title>Document</title>
-</head>
-<body>
-    
 </body>
 </html>
 
