--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
    
     <title>Document</title>
+  
 </head>
 <body>
     <button id="click-me">click me!</button> 
     <input id="page-number" value='' type="number" />
   <div id="result"></div>
-  
-  <script
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+  <!--<script
   src="https://code.jquery.com/jquery-2.2.4.js"
   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
   crossorigin="anonymous"></script>
-  <script src="E:\Ajax\index.js"></script>
+-->
+  <script src=".\index.js"></script>
+  <script src=".\service.js"></script>
 </body>
 </html>
 
