to-do-list api, get, post

--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
   
 </head>
 <body>
-    <button id="click-me">click me!</button> 
+    <button id="click-me">Get images</button> 
     <input id="page-number" value='' type="number" />
+    <button id="tasks-me">Show tasks</button> 
   <div id="result"></div>
+  <ul id="tasks-result"></ul>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
   <!--<script
   src="https://code.jquery.com/jquery-2.2.4.js"
   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
   crossorigin="anonymous"></script>
 -->
+<script src=".\service.js"></script>
   <script src=".\index.js"></script>
-  <script src=".\service.js"></script>
+  
 </body>
 </html>
 
